fix alignment in contextbox and overflow in studip.article, fixes #9911

--- a/resources/assets/stylesheets/less/article.less
+++ b/resources/assets/stylesheets/less/article.less
@@ -61,7 +61,6 @@ article.studip {
                 border-right: 1px solid @content-color;
                 padding-right: 4px;
                 margin-right: 4px;
-                max-height: 2em;
 
                 &:last-child {
                     border-right: none;
